[package]
name = "tide-api-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
femme = "2.2.1"
serde = { version = "1.0.160", features = ["derive"] }
tide = "0.16.0"
